Prevent wrapping items per page display

--- a/client/src/components/PaginatedTable.scss
+++ b/client/src/components/PaginatedTable.scss
@@ -42,6 +42,7 @@
     display: flex;
     align-self: center;
     min-height: 35px;
+
     cursor: pointer;
   }
 
@@ -50,6 +51,11 @@
     padding: 8px;
     background-color: transparent;
     cursor: pointer;
+  }
+
+  &__items-per-page-display {
+    white-space: nowrap;
+    width: 200px;
   }
 
   &__column-header-row {
